# asl

./: CMakeLists.txt  flake.nix
asl-json-backend/tests/: ASLJsonBackendTest.py  dune  lit.cfg.py  lit.site.cfg.py.in
asl-json-backend/tests/ASLDefinition.t/: lit.local.cfg
asl-json-backend/tests/collections.t/: on-local-var.asl
asl-json-backend/tests/recursive.t/: simple-recursive.asl
asl-mlir/: CMakeLists.txt
asl-mlir/asl-opt/: CMakeLists.txt  JSONImporter.cpp  JSONImporter.h  asl-opt.cpp
asl-mlir/include/ASL/: ASLAttributes.h  ASLDeclarations.td  ASLExpressions.td  ASLOps.h  ASLStatement.td  ASLTypes.td
asl-mlir/lib/: CMakeLists.txt
asl-mlir/lib/ASL/: ASLDialect.cpp  ASLOps.cpp
asl-mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
asl-mlir/test/ASL/ASLDefinition.t/: Accessor.asl  AssertionStatement.asl  Bitfields.asl  Bitfields_nested.asl  Bitvector_rotate.asl  Bitvector_slices.asl  CaseStatement.discriminant.asl  CaseStatement.no_otherwise.asl  CaseStatement.otherwise.asl  CaseStatement.where.asl  CatchingExceptions.asl  CatchingExceptions2.asl  ConstrainedIntegers1.asl  ConstrainedIntegers2.asl  DynamicErrorReporting.asl  EvaluationOrder.asl  GlobalNamespace.asl  GlobalPragma.asl  GlobalPragma2.asl  Guide.OperatorPrecedence.asl  GuideRule.BitvectorWidthBounds.asl  GuideRule.TupleElementAccess.asl  GuideRule.TupleLength.asl  LocalStorageDeclarations.asl  NamedTypes.asl  NamedTypes2.asl  NamedTypes3.asl  NamedTypes4.asl  Overriding.asl  ParameterElision.asl  ParametricFunction.asl  ParametricFunction2.asl  SubprogramDeclarations.asl  TupleExpressions.asl  UnreachableStatement.asl  constrained_bitwidth.asl  main0.asl  main_uncaught.asl  spec1.asl  spec2.asl  (+2 more)
asl-mlir/test/ASL/ASLSemanticsReference.t/: EvalCatchers.asl  SemanticsRule.ATCNotDynamicErrorIfFalse.asl  SemanticsRule.ATCValue.asl  SemanticsRule.ATCVariousErrors.asl  SemanticsRule.AsBitvector.asl  SemanticsRule.AssignArgs.asl  SemanticsRule.Block.asl  SemanticsRule.Call.asl  SemanticsRule.Catch.asl  SemanticsRule.CatchNamed.asl  SemanticsRule.CatchNoThrow.asl  SemanticsRule.CatchOtherwise.asl  SemanticsRule.CheckNonOverlappingSlices.asl  SemanticsRule.CheckRecurseLimit.asl  SemanticsRule.CheckRecurseLimit.limit_reached.asl  SemanticsRule.CheckRecurseLimit.no_limit.asl  SemanticsRule.ConcatBitvectors.asl  SemanticsRule.DeclareGlobal.asl  SemanticsRule.EArbitraryArray.asl  SemanticsRule.EArbitraryInteger0.asl  SemanticsRule.EArbitraryInteger3.asl  SemanticsRule.EArbitraryIntegerRange3-42-3.asl  SemanticsRule.EArbitraryIntegerRange3-42-42.asl  SemanticsRule.EBinopAndFalse.asl  SemanticsRule.EBinopImplExFalso.asl  SemanticsRule.EBinopOrTrue.asl  SemanticsRule.EBinopPlusAssert.asl  SemanticsRule.EBinopPlusPrint.asl  SemanticsRule.ECall.asl  SemanticsRule.EConcat.asl  SemanticsRule.EConcat2.asl  SemanticsRule.ECondARBITRARY3or42.asl  SemanticsRule.ECondFALSE.asl  SemanticsRule.EGetArray.asl  SemanticsRule.EGetArrayTooSmall.asl  SemanticsRule.EGetEnumArray.asl  SemanticsRule.EGetItem.asl  (+76 more)
doc/: Development.typ  (+2 more)
mlir/asl-opt/: CMakeLists.txt  asl-opt.cpp
(+480 files in other folders)
